--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
     - assets/images/google_logo.png
     - assets/images/logo_facebook.png
     - assets/images/run_iklan.png
+    - assets/images/sarapan.png
+    - assets/images/workout.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
