--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   fl_chart: ^1.1.1
+  image_picker: ^1.2.1
+  camera: ^0.11.3
+  http: ^1.6.0
+  flutter_secure_storage: ^10.0.0
+  shared_preferences: ^2.5.4
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  http: ^1.2.1  
+    sdk: flutter 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
