feat: Enhance homepage layout and functionality
- Integrated ArticleController for managing articles.
- Updated user profile picture retrieval logic.
- Improved UI with a modern card layout for advertisements.
- Added a new InfoApps page for application information.
- Refactored Profile page with enhanced UI and logout functionality.
- Introduced Report page for displaying user reports with charts.
- Enhanced camera functionality in OpenCamera page with better error handling.
- Updated inputbmi page to handle image paths correctly.
- Improved result_scan page to display posture analysis and BMI results.
- Added new dependencies for state management with GetX.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_secure_storage: ^10.0.0
   shared_preferences: ^2.5.4
   google_sign_in: ^6.2.1
+  get: ^4.7.3
 
 dev_dependencies:
   flutter_test:
