--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.5.4
   google_sign_in: ^6.2.1
   get: ^4.7.3
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
