feat: Enhance UI and functionality across multiple pages
- Updated AllArticle page to show skeleton loaders while articles are loading.
- Refactored RegisterPage to utilize a controller for registration logic and improved UI with better styling and input handling.
- Enhanced ChatBot page with a typing indicator and integrated chatbot service for responses.
- Modified EditProfile page to use a new image picker for selecting profile images.
- Improved Homepage to display loading indicators more effectively.
- Updated RePolahidup page to handle alarm notifications and checklist management more robustly.
- Refined Ubahpass page for password updates with better UI and loading states.
- Added new dependencies for image and video handling, and updated pubspec.yaml accordingly.
- Adjusted widget tests to reflect changes in the app structure.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get: ^4.7.3
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.4
+  shimmer: ^3.0.0
+  wechat_assets_picker: ^10.1.0
 
 dev_dependencies:
   flutter_test:
