--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  integration_test:
+    sdk: flutter
+  test: ^1.26.3
+  mockito: ^5.4.0
+  http_mock_adapter: ^0.6.1
+  build_runner: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
