--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dev_dependencies:
   mockito: ^5.4.0
   http_mock_adapter: ^0.6.1
   build_runner: ^2.4.0
-
+  mocktail: ^1.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
